@@ -5,4 +5,4 @@ VERSION=1.2
 STAGE=beta
 
 # PUBLISH_SOURCEFORGE options are 1 or 0
-PUBLISH_SOURCEFORGE=1
+PUBLISH_SOURCEFORGE=0
